HelloUltraviolet/Fixtures/RejectedSource/DataTypes/GenericCovariantSubtyping/Expected.uv
//! Expected diagnostic metadata for the GenericCovariantSubtyping rejected-source specimen.

expectedDiagnostic("E-TYP-1521", "Sub-Generic-Covariant-Err")
